--- a/Markdown_week_9/Iversen_markdown_9.Rmd
+++ b/Markdown_week_9/Iversen_markdown_9.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Week_9"
-output: html_document
-
+output:
+  pdf_document: default
+  word_document: default
+  html_document: default
 ---
 ## *Or, technically week 8, part II*
 
